Send Mail implementation
